js/src/tests/test262/built-ins/Error/prototype/stack/setter-non-string-value.js

















var set = Object.getOwnPropertyDescriptor(Error.prototype, 'stack').set;



var coercible = {
  toString: function () { return 'coerced'; },
  valueOf: function () { return 'coerced'; },
};

var badValues = [
  ['undefined', undefined],
  ['null', null],
  ['true', true],
  ['false', false],
  ['number', 1],
  ['object', {}],
  ['array', []],
  ['object with toString', coercible],
  ['String wrapper object', new String('boxed')],
  typeof Symbol === 'undefined' ? null : ['symbol', Symbol('s')],
  typeof BigInt === 'undefined' ? null : ['bigint', BigInt(0)]
];

for (var i = 0; i < nativeErrors.length; ++i) {
  var Ctor = nativeErrors[i];
  var err = new Ctor('msg');

  for (var j = 0; j < badValues.length; ++j) {
    if (!badValues[j]) continue;
    var label = badValues[j][0];
    var value = badValues[j][1];
    assert.throws(TypeError, function () {
      set.call(err, value);
    }, Ctor.name + ': ' + label);
  }
}

reportCompare(0, 0);
